# FVAD

./: .clang-tidy  .clangd-format  CMakeLists.txt  README.md
include/creeper-qt/: common.hh  container.hh  module.hh  widget.hh
include/creeper-qt/container/: linear.hh  type.hh
include/creeper-qt/module/: round-icon-button.hh  scallop-clock.hh  switch-card.hh
include/creeper-qt/setting/: color.hh  style-template.hh  theme.cc  theme.hh
include/creeper-qt/utility/: math.hh  pid.hh  pimpl.hh  single.hh
include/creeper-qt/widget/: basic-shape.hh  check-box.cc  check-box.hh  combo-box.hh  concave-slider.cc  concave-slider.hh  convex-slider.cc  convex-slider.hh  image.cc  image.hh  label.hh  line-edit.cc  line-edit.hh  list-widget.cc  list-widget.hh  main-window.cc  main-window.hh  menu.hh  push-button.cc  push-button.hh  slider.hh  switch-button.cc  switch-button.hh  wave-circle.cc  wave-circle.hh  widget.hh
include/gui/: plotWidget.hpp
res/: creeper-qt-resource.qrc
res/common-blue/: theme.yaml
res/common-green/: theme.yaml
res/common-grey/: theme.yaml
res/common-purple/: theme.yaml
src/: main.cpp
